--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pull-md": "cp ~/Documents/secondbrain/2-Areas/TechBlog/* ./src/posts/"
+    "pull-md": "./pull.sh"
   },
   "dependencies": {
     "date-fns": "^3.6.0",
