--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/generate-rss.js && next build",
+    "build": "node scripts/generate-metadata.js && node scripts/generate-rss.js && next build",
     "start": "next start",
     "lint": "next lint",
     "pull-md": "./pull.sh"
